# fantasy-football-ai

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PRODUCTION.md  DEPLOYMENT_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  analyze_docker_size.py  analyze_project.py  cleanup_project.sh  database_debug.py  database_inspector.py  debug_nfl_api.py  deploy-to-railway.sh  docker-compose.yml  fix_main_script.py  populate_test_data.py  pyproject.toml  railway-deployment-guide.md  railway.json  requirements.txt  run_docker.sh  run_with_conda.sh  setup.py  setup.sh  setup_local.sh  setup_postgres.sql  setup_project.sh  setup_script.py  setup_with_python310.sh  share_files.py  show_project_structure.sh  simple_db_check.py  test_prediction_api.py  test_transparency_engine.py  (+1 more)
.cleanup_backup/: README.md  cleanup_project.py  debug_nfl_api.py  requirements.txt  setup_repository.sh  simple_nfl_test.py  test_nfl_api.py
backend/: .dockerignore  .env.example  .gitignore  DATA_SOURCES_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.complex  Dockerfile.dev  Dockerfile.minimal  Dockerfile.multistage  Dockerfile.prod  FANTASY_ML_TRAINING_COMPLETE.md  ML_AUDIT_REPORT_CRITICAL.md  ML_REBUILD_COMPLETE_REPORT.md  ML_TRAINING_SUMMARY.md  PRODUCTION_ML_TRAINING_REPORT.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_HEALTHCHECK_FIX.md  README.md  REDIS_CONFLICT_RESOLUTION.md  SYSTEM_TEST_REPORT.md  audit_ml_models.py  celery_app.py  check_imports.py  collect_all_nfl_data.py  collect_complete_nfl_data.py  collect_expanded_nfl_data.py  collect_full_historical_data.py  comprehensive_test.py  continue_data_collection.py  emergency_server.py  final_system_test.py  health_check.py  healthcheck.sh  inspect_features.py  main.py  main_optimized.py  main_simple.py  proper_model_validation_report.txt  (+40 more)
backups/: main.py.backup  main.py.broken  main.py.working
config/: .pre-commit-config.yaml  project_progress.json
data/: fantasy_weekly_stats_2024.csv
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY_2024.md  DEPLOYMENT.md  ML_ENHANCEMENTS_SUMMARY.md  PROJECT_STRUCTURE.md  (+1 more)
(+244 files in other folders)
